# wagtail-picture-tag

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  Makefile  README.rst  noxfile.py  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: dependabot.yml
tests/: settings.py
wagtail_picture_tag/: apps.py  tests.py  wagtail_hooks.py
wagtail_picture_tag/templatetags/: picture_tags.py
