[project]
name = "wagtail-picture-tag"
version = "2.0.1"
description = "A Wagtail app to add a picture tag."
readme = "README.rst"
authors = [{name = "Ben Gosney", email = "bengosney@googlemail.com"}]
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = ["wagtail"]

[project.urls]
Homepage = "https://github.com/bengosney/wagtail-picture-tag"

[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.isort]
default_section = "THIRDPARTY"
known_django = ["django"]
known_wagtail = ["wagtail"]
known_first_party = ["wagtail_picture_tag"]
sections = ["FUTURE", "STDLIB", "DJANGO", "WAGTAIL", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_future = "Future"
import_heading_stdlib = "Standard Library"
import_heading_django = "Django"
import_heading_wagtail = "Wagtail"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "First Party"
import_heading_localfolder = "Locals"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 128

[tool.pycodestyle]
max_line_length = "128"

[tool.flake8]
exclude = ".git,*migrations*,node_modules,.history"
max-line-length = "128"
extend-ignore = "E203"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.black]
line-length = 128
target-version = ['py311']

[tool.pycln]
all = true
