[metadata]
name = wagtail-picture-tag
version = 0.1
description = A Wagtail app to add a picture tag.
long_description = file: README.rst
url = https://github.com/bengosney/wagtail-picture-tag
author = Ben Gosney
author_email = bengosney@googlemail.com
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Wagtail >= 2.3