[metadata]
name = wagtail-picture-tag
version = 0.1
description = A Wagtail app to add a picture tag.
long_description = file: README.rst
url = https://github.com/bengosney/wagtail-picture-tag
author = Ben Gosney
author_email = bengosney@googlemail.com
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Wagtail >= 2.3


[isort]
default_section = THIRDPARTY
known_django = django
known_wagtail = wagtail
known_first_party = wagtail_picture_tag
sections = FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
import_heading_future = Future
import_heading_stdlib = Standard Library
import_heading_django = Django
import_heading_wagtail = Wagtail
import_heading_thirdparty = Third Party
import_heading_firstparty = First Party
import_heading_localfolder = Locals
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 128

[pycodestyle]
max_line_length = 128

[flake8]
exclude = .git,*migrations*,node_modules,.history
max-line-length = 128
extend-ignore = E203